feat: improved formatting of book textcontent

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ p, h1, h2, h3, h4, h5, h6 {
     height: 275px;
     border: 1px solid black;
     text-align: center;
+    white-space: pre-line;
 }
 
 .footer {
