--- a/style.css
+++ b/style.css
@@ -32,45 +32,90 @@ p, h1, h2, h3, h4, h5, h6 {
     isolation: isolate;
 }
 
+@font-face {
+    font-family: roboto-reg;
+    src: url(/fonts/Roboto-Regular.ttf);
+}
+
+@font-face {
+    font-family: roboto-med;
+    src: url(/fonts/Roboto-Medium.ttf);
+}
+
+@font-face {
+    font-family: roboto-bold;
+    src: url(/fonts/Roboto-bold.ttf);
+}
+
+@font-face {
+    font-family: roboto-thin;
+    src: url(/fonts/Roboto-Thin.ttf);
+}
+
 .container {
     display: grid;
     grid-template-rows: minmax(100px, .5fr) minmax(600px, 3fr) minmax(100px, .2fr);
     gap: 10px;
     height: 100vh;
+    background-color: #f1faee;
 }
 
 .header {
     display: flex;
-    border: 1px solid black;
     align-items: center;
     justify-content: space-between;
     padding: 15px;
+    background-color: #457b9d;
+    box-shadow: 0px 5px 5px #9da0a1;
+    font-family: roboto-bold;
+    color: #f1faee;
+    font-size: 20px;
+}
+
+.btn-add {
+    border-radius: 15px;
+    padding: 20px;
+    background-color: #f1faee;
+    border: none;
+}
+
+.btn-add:hover {
+    cursor: pointer;
 }
 
 .main {
-    border: 1px solid black;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
     grid-template-rows: repeat(auto-fit, minmax(275px, 1fr));
     justify-items: center;
     align-items: center;
     padding: 20px;
+    background-color: #f1faee;
+    
 }
 
 .card {
     width: 225px;
     height: 275px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    padding: 10px;
     text-align: center;
     white-space: pre-line;
+    background-color: #a8dadc;
+    border-radius: 15px;
+    box-shadow: -8px 10px 0px -2px #052e16;
+    font-family: roboto-reg;
 }
 
 .footer {
-    border: 1px solid black;
     padding: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #457b9d;
+    box-shadow: 0px -5px 5px #9da0a1;
+    font-family: roboto-med;
+    color: #f1faee;
 }
 
 dialog {
