--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ p, h1, h2, h3, h4, h5, h6 {
     padding: 15px;
     background-color: #457b9d;
     box-shadow: 0px 5px 5px #9da0a1;
-    font-family: roboto-bold;
+    font-family: roboto-bold, Arial, Helvetica, sans-serif	
+    ;
     color: #f1faee;
     font-size: 20px;
 }
@@ -77,9 +78,7 @@ p, h1, h2, h3, h4, h5, h6 {
     padding: 20px;
     background-color: #f1faee;
     border: none;
-}
-
-.btn-add:hover {
+    outline: none;
     cursor: pointer;
 }
 
@@ -97,14 +96,13 @@ p, h1, h2, h3, h4, h5, h6 {
 .card {
     width: 225px;
     height: 275px;
-    /* border: 1px solid black; */
     padding: 10px;
     text-align: center;
     white-space: pre-line;
     background-color: #a8dadc;
     border-radius: 15px;
     box-shadow: -8px 10px 0px -2px #052e16;
-    font-family: roboto-reg;
+    font-family: roboto-reg, Arial, Helvetica, sans-serif;
 }
 
 .footer {
@@ -114,19 +112,71 @@ p, h1, h2, h3, h4, h5, h6 {
     justify-content: center;
     background-color: #457b9d;
     box-shadow: 0px -5px 5px #9da0a1;
-    font-family: roboto-med;
+    font-family: roboto-med, Arial, Helvetica, sans-serif;
     color: #f1faee;
 }
 
 dialog {
     margin: 0;
-    transform: translateX(-50%) translateY(30%);
+    transform: translateX(-50%) translateY(100%);
     left: 50%;
     width: 500px;
-    height: 500px;
+    height: 250px;
+    background-color: #457b9d;
 }
 
 ::backdrop {
     background-color: rgb(0, 0, 0);
     opacity: 0.75;
   }
+
+.book_form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+}   
+
+.input-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    font-family: roboto-reg,Arial, Helvetica, sans-serif;
+}
+
+.btn-container {
+    display: flex;
+    gap: 20px;
+}
+
+input {
+    background-color: #f1f1f1;
+    border: none;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+input:focus {
+    outline: none;
+}
+
+span {
+    color: white;
+    font-size: 1.1rem
+}
+
+.btn-container > * {
+    padding: 10px;
+    border-radius: 10px;
+    width: 100px;
+    border: none;
+    background-color: #1d3557;
+    color: white;
+    font-family: roboto-reg, Arial, Helvetica, sans-serif;
+}
+
+.btn-close:hover,
+.btn-submit:hover {
+    cursor: pointer;
+}
