--- a/style.css
+++ b/style.css
@@ -169,6 +169,16 @@ span {
     font-size: 1.1rem
 }
 
+select {
+    width: 190px;
+    height: 35px;
+    border-radius: 10px;
+}
+
+select:focus {
+    outline: none;
+}
+
 .btn-container > * {
     padding: 10px;
     border-radius: 10px;
